[tool.poetry]
name = "poc-gh-actions"
version = "1.0.0"
description = "Test project"
authors = ["Alesia Larina"]

[tool.poetry.dependencies]
python = "^3.9"
docker = "^6.0.1"
requests = "^2.29.0"

[tool.poetry.dev-dependencies]
pylint = "^2.17.3"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
